--- a/caliper/report.html
+++ b/caliper/report.html
@@ -135,8 +135,6 @@
                 <h3>&nbspBenchmark results</h3>
                 <li><a href="#benchmarksummary">Summary</a></li>
                     <li><a href="#open">open</a></li>
-                    <li><a href="#query">query</a></li>
-                    <li><a href="#transfer">transfer</a></li>
             </ul>
             <ul>
                 <h3>&nbspSystem under test</h3>
@@ -154,23 +152,17 @@
                     </tr>
 
                     <tr>
-                         <td>open</td> <td>1000</td> <td>0</td> <td>50.0</td> <td>8.94</td> <td>0.23</td> <td>2.91</td> <td>44.8</td>
-                    </tr>
-                    <tr>
-                         <td>query</td> <td>1000</td> <td>0</td> <td>100.3</td> <td>0.03</td> <td>0.00</td> <td>0.00</td> <td>100.3</td>
-                    </tr>
-                    <tr>
-                         <td>transfer</td> <td>50</td> <td>0</td> <td>6.2</td> <td>3.03</td> <td>0.29</td> <td>1.67</td> <td>5.4</td>
+                         <td>open</td> <td>1588</td> <td>412</td> <td>372.2</td> <td>4.88</td> <td>1.80</td> <td>3.31</td> <td>19.1</td>
                     </tr>
                 </table>
             </div>
             <div style="border-bottom: 1px solid #d9d9d9; padding-bottom: 10px;" id="open">
                 <h2>Benchmark round: open</h2>
-                <p>Test description for the opening of an account through the deployed contract.</p>
+                <p>Test description for the opening of an account through the deployed contract, default tps&#x3D;50.</p>
                 <pre style="overflow: visible;white-space: pre-wrap;max-height:100%;">rateControl:
   type: fixed-rate
   opts:
-    tps: 50
+    tps: 1000
 </pre>
                         <h3>Performance metrics for open</h3>
                             <table style="min-width: 100%;">
@@ -178,50 +170,10 @@
                                      <th>Name</th> <th>Succ</th> <th>Fail</th> <th>Send Rate (TPS)</th> <th>Max Latency (s)</th> <th>Min Latency (s)</th> <th>Avg Latency (s)</th> <th>Throughput (TPS)</th>
                                 </tr>
                                 <tr>
-                                     <td>open</td> <td>1000</td> <td>0</td> <td>50.0</td> <td>8.94</td> <td>0.23</td> <td>2.91</td> <td>44.8</td>
+                                     <td>open</td> <td>1588</td> <td>412</td> <td>372.2</td> <td>4.88</td> <td>1.80</td> <td>3.31</td> <td>19.1</td>
                                 </tr>
                             </table>
                         <h3>Resource utilization for open</h3>
-            </div>
-
-            <div style="border-bottom: 1px solid #d9d9d9; padding-bottom: 10px;" id="query">
-                <h2>Benchmark round: query</h2>
-                <p>Test description for the query performance of the deployed contract.</p>
-                <pre style="overflow: visible;white-space: pre-wrap;max-height:100%;">rateControl:
-  type: fixed-rate
-  opts:
-    tps: 100
-</pre>
-                        <h3>Performance metrics for query</h3>
-                            <table style="min-width: 100%;">
-                                <tr>
-                                     <th>Name</th> <th>Succ</th> <th>Fail</th> <th>Send Rate (TPS)</th> <th>Max Latency (s)</th> <th>Min Latency (s)</th> <th>Avg Latency (s)</th> <th>Throughput (TPS)</th>
-                                </tr>
-                                <tr>
-                                     <td>query</td> <td>1000</td> <td>0</td> <td>100.3</td> <td>0.03</td> <td>0.00</td> <td>0.00</td> <td>100.3</td>
-                                </tr>
-                            </table>
-                        <h3>Resource utilization for query</h3>
-            </div>
-
-            <div style="border-bottom: 1px solid #d9d9d9; padding-bottom: 10px;" id="transfer">
-                <h2>Benchmark round: transfer</h2>
-                <p>Test description for transfering money between accounts.</p>
-                <pre style="overflow: visible;white-space: pre-wrap;max-height:100%;">rateControl:
-  type: fixed-rate
-  opts:
-    tps: 5
-</pre>
-                        <h3>Performance metrics for transfer</h3>
-                            <table style="min-width: 100%;">
-                                <tr>
-                                     <th>Name</th> <th>Succ</th> <th>Fail</th> <th>Send Rate (TPS)</th> <th>Max Latency (s)</th> <th>Min Latency (s)</th> <th>Avg Latency (s)</th> <th>Throughput (TPS)</th>
-                                </tr>
-                                <tr>
-                                     <td>transfer</td> <td>50</td> <td>0</td> <td>6.2</td> <td>3.03</td> <td>0.29</td> <td>1.67</td> <td>5.4</td>
-                                </tr>
-                            </table>
-                        <h3>Resource utilization for transfer</h3>
             </div>
 
             <div style="border-bottom: 1px solid #d9d9d9; padding-bottom: 10px;">
@@ -232,49 +184,52 @@ description: &gt;-
   This is an example benchmark for Caliper, to test the backend DLT&#39;s
   performance with simple account opening &amp; querying transactions.
 workers:
+  type: local
   number: 10
 rounds:
   - label: open
     description: &gt;-
       Test description for the opening of an account through the deployed
-      contract.
-    txNumber: 1000
+      contract, default tps&#x3D;50.
+    txNumber: 2000
     rateControl:
       type: fixed-rate
       opts:
-        tps: 50
+        tps: 1000
     workload:
       module: benchmarks&#x2F;scenario&#x2F;simple&#x2F;open.js
       arguments:
         initialMoney: 10000
         moneyToTransfer: 100
-        numberOfAccounts: 1000
+        numberOfAccounts: 2000
   - label: query
-    description: Test description for the query performance of the deployed contract.
-    txNumber: 1000
+    description: &gt;-
+      Test description for the query performance of the deployed contract,
+      default tps&#x3D;100.
+    txNumber: 2000
     rateControl:
       type: fixed-rate
       opts:
-        tps: 100
+        tps: 1000
     workload:
       module: benchmarks&#x2F;scenario&#x2F;simple&#x2F;query.js
       arguments:
         initialMoney: 10000
         moneyToTransfer: 100
-        numberOfAccounts: 1000
+        numberOfAccounts: 2000
   - label: transfer
-    description: Test description for transfering money between accounts.
-    txNumber: 50
+    description: &#39;Test description for transfering money between accounts, default tps&#x3D;5.&#39;
+    txNumber: 2000
     rateControl:
       type: fixed-rate
       opts:
-        tps: 5
+        tps: 1000
     workload:
       module: benchmarks&#x2F;scenario&#x2F;simple&#x2F;transfer.js
       arguments:
         initialMoney: 10000
         moneyToTransfer: 100
-        numberOfAccounts: 1000
+        numberOfAccounts: 2000
         money: 100
 </pre>
                 <h3>SUT</h3>
